Mon Jun 09 14:46:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/Stack_Trace.cpp:
        * ace/Stack_Trace.h:

          Remove TEXT() and TCHAR Fuzz errors.

Mon Jun  9 11:26:36 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * ace/ace_for_tao.mpc:

          Added Stack_Trace.cpp since Log_Msg.cpp needs it.

Mon Jun 09 10:42:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * ace/NT_Service.cpp:

          unambiguated call to time_value msec(long) at line 437
          caused by new uint64 non-const setter provided by:
          Thu Jun  5 14:52:43 UTC 2008  Steve Huston

Sun Jun  8 18:09:22 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/platform.m4:

          Add ACE_CHECK_HAS_DLSYM_SEGFAULT_ON_INVALID_HANDLE feature
          check, which sets the ACE_HAS_DLSYM_SEGFAULT_ON_INVALID_HANDLE
          feature test macro on Linux and OpenBSD systems (as is done in
          the canned config-*.h files).  Fixes Bugzilla #3141.

Sat Jun  7 13:56:56 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>

        * ace/Log_Msg.cpp:

          Use ACE_TEXT instead of ACE_LIB_TEXT.

Sat Jun  7 03:28:01 UTC 2008  Yan Dai  <dai_y@ociweb.com>

        Merged in stack_trace_branch that added stack trace support.

        * NEWS:

          Add an entry for stack trace support.

        * ace/Log_Msg.h:

          Added comments for "%?".

        * ace/Log_Msg.cpp:

          Added new conversion character, the question mark, which gets
          replaced by a stack trace on supported platforms.

        * ace/Stack_Trace.h:
        * ace/Stack_Trace.cpp:

          Added new class that, on supported platforms, will take a
          snapshot of the current stack when instantiated.

        * ace/ace.mpc:

          Added Stack_Trace in as source.

        * ace/config-macosx-leopard.h:

          Added ACE_HAS_EXECINFO_H define.

        * ace/Makefile.am:

          Added Stack_Trace.h and Stack_Trace.cpp.
