@@ -47,7 +47,7 @@ determine_starting_frame (ssize_t initial_frame, ssize_t offset)
 }
 
 
-#if defined(__GLIBC__) || defined(ACE_HAS_EXECINFO_H)
+#if (defined(__GLIBC__) || defined(ACE_HAS_EXECINFO_H)) && !defined (ACE_LYNXOS_MAJOR)
 // This is the code for glibc
 #  include <execinfo.h>
 
@@ -425,7 +425,7 @@ ACE_Stack_Trace::generate_trace (ssize_t, size_t)
     "ACE is built with _WIN32_WINNT set to 0x501 or above>");
 }
 
-#elif defined(ACE_WIN32) && !defined(ACE_HAS_WINCE)
+#elif defined(ACE_WIN32) && !defined(ACE_HAS_WINCE) && !defined (__BORLANDC__) && !defined (__MINGW32__)
 #  include <windows.h>
 #  include <Dbghelp.h>
 
