@@ -1,3 +1,11 @@
+Mon Jun  9 19:40:56 UTC 2008  Yan Dai  <dai_y@ociweb.com>
+
+        * ace/Stack_Trace.h:
+        * ace/Stack_Trace.cpp:
+
+          Excluded LynxOS, MinGW and Borland builds from stack trace supported 
+          platforms.
+
 Mon Jun 09 14:46:00 UTC 2008  Simon Massey  <sma at prismtech dot com>
 
         * ace/Stack_Trace.cpp:
